remove cards from player_service
